--- a/docs/examples/guides/latest/volumesnapshot/statefulset/restored-statefulset.yaml
+++ b/docs/examples/guides/latest/volumesnapshot/statefulset/restored-statefulset.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: svc
+  name: restore-svc
   labels:
-    app: demo
+    app: restore-demo
   namespace: demo
 spec:
   ports:
@@ -11,7 +11,7 @@ spec:
       name: web
   clusterIP: None
   selector:
-    app: stash
+    app: restore-demo
 ---
 apiVersion: apps/v1
 kind: StatefulSet
@@ -21,13 +21,13 @@ metadata:
 spec:
   selector:
     matchLabels:
-      app: stash
+      app: restore-demo
   serviceName: svc
   replicas: 3
   template:
     metadata:
       labels:
-        app: stash
+        app: restore-demo
     spec:
       containers:
         - args:
