--- a/docs/examples/guides/latest/workloads/deployment/recovered_deployment.yaml
+++ b/docs/examples/guides/latest/workloads/deployment/recovered_deployment.yaml
@@ -15,18 +15,18 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
-    app: stash-demo
+    app: stash-recovered
   name: stash-recovered
   namespace: demo
 spec:
   replicas: 3
   selector:
     matchLabels:
-      app: stash-demo
+      app: stash-recovered
   template:
     metadata:
       labels:
-        app: stash-demo
+        app: stash-recovered
       name: busybox
     spec:
       containers:
