--- a/docs/examples/guides/latest/workloads/statefulset/recovered_statefulset.yaml
+++ b/docs/examples/guides/latest/workloads/statefulset/recovered_statefulset.yaml
@@ -9,7 +9,7 @@ spec:
       port: 80
       targetPort: 0
   selector:
-    app: stash-demo
+    app: stash-recovered
   clusterIP: None
 ---
 apiVersion: apps/v1
@@ -18,17 +18,17 @@ metadata:
   name: stash-recovered
   namespace: demo
   labels:
-    app: stash-demo
+    app: stash-recovered
 spec:
   replicas: 3
   selector:
     matchLabels:
-      app: stash-demo
+      app: stash-recovered
   serviceName: re-headless
   template:
     metadata:
       labels:
-        app: stash-demo
+        app: stash-recovered
     spec:
       containers:
         - name: busybox
