--- a/docs/examples/guides/latest/auto-backup/workload/statefulset.yaml
+++ b/docs/examples/guides/latest/auto-backup/workload/statefulset.yaml
@@ -20,8 +20,8 @@ metadata:
   labels:
     app: stash-demo
   annotations:
-    stash.appscode.com/backup-template: workload-backup-template
-    stash.appscode.com/target-directories: "/source/data-1,/source/data-2"
+    stash.appscode.com/backup-blueprint: workload-backup-blueprint
+    stash.appscode.com/target-paths: "/source/data-1,/source/data-2"
     stash.appscode.com/volume-mounts: "source-data-1:/source/data-1,source-data-2:/source/data-2"
 spec:
   replicas: 3
