--- a/docs/examples/crds/backupconfiguration.yaml
+++ b/docs/examples/crds/backupconfiguration.yaml
@@ -16,7 +16,7 @@ spec:
       apiVersion: apps/v1
       kind: Deployment
       name: stash-demo
-    directories:
+    paths:
     - /source/data
     volumeMounts:
     - name: source-data
