--- a/docs/examples/crds/task.yaml
+++ b/docs/examples/crds/task.yaml
@@ -1,10 +1,10 @@
 apiVersion: stash.appscode.com/v1beta1
 kind: Task
 metadata:
-  name: pg-backup
+  name: postgres-backup-11.2
 spec:
   steps:
-  - name: pg-backup
+  - name: postgres-backup-11.2
     params:
     - name: outputDir # specifies where to write output file
       value: /tmp/output
