--- a/docs/examples/guides/latest/platforms/minio/backupconfiguration.yaml
+++ b/docs/examples/guides/latest/platforms/minio/backupconfiguration.yaml
@@ -15,7 +15,7 @@ spec:
     volumeMounts:
     - name: source-data
       mountPath: /source/data
-    directories:
+    paths:
     - /source/data
   retentionPolicy:
     name: 'keep-last-5'
