--- a/docs/examples/crds/backupsession.yaml
+++ b/docs/examples/crds/backupsession.yaml
@@ -1,52 +1,37 @@
 apiVersion: stash.appscode.com/v1beta1
 kind: BackupSession
 metadata:
-  creationTimestamp: "2019-08-02T10:55:09Z"
-  generation: 1
-  labels:
-    app.kubernetes.io/component: stash-backup
-    app.kubernetes.io/managed-by: stash.appscode.com
-    stash.appscode.com/backup-configuration: deployment-stash-demo
   name: deployment-stash-demo-1564743309
   namespace: demo
-  ownerReferences:
-  - apiVersion: stash.appscode.com/v1beta1
-    blockOwnerDeletion: false
-    kind: BackupConfiguration
-    name: deployment-stash-demo
-    uid: f319b4da-b513-11e9-b011-080027aded7e
-  resourceVersion: "67422"
-  selfLink: /apis/stash.appscode.com/v1beta1/namespaces/demo/backupsessions/deployment-stash-demo-1564743309
-  uid: fed255df-b513-11e9-b011-080027aded7e
 spec:
   backupConfiguration:
     name: deployment-stash-demo
 status:
+  totalHosts: 1
   phase: Succeeded
   sessionDuration: 43.044662123s
   stats:
-  - duration: 43.044662123s
-    hostname: host-0
+  - hostname: host-0
     phase: Succeeded
+    duration: 43.044662123s
     snapshots:
-    - fileStats:
-        modifiedFiles: 0
-        newFiles: 1
-        totalFiles: 1
-        unmodifiedFiles: 0
-      name: 79b223e2
+    - name: 79b223e2
       path: /source/data-1
       processingTime: "0:04"
       size: 41 B
       uploaded: 693 B
-    - fileStats:
+      fileStats:
         modifiedFiles: 0
         newFiles: 1
         totalFiles: 1
         unmodifiedFiles: 0
-      name: ab6fef46
+    - name: ab6fef46
       path: /source/data-2
       processingTime: "0:03"
       size: 41 B
       uploaded: 693 B
-  totalHosts: 1
+      fileStats:
+        modifiedFiles: 0
+        newFiles: 1
+        totalFiles: 1
+        unmodifiedFiles: 0
