Allow to specify subPath for auto-backup + use default mountPath, target paths for PVC backup

--- a/docs/examples/guides/latest/volumes/restoresession.yaml
+++ b/docs/examples/guides/latest/volumes/restoresession.yaml
@@ -13,9 +13,5 @@ spec:
       apiVersion: v1
       kind: PersistentVolumeClaim
       name: nfs-pvc
-    volumeMounts:
-    - name:  nfs-pvc
-      mountPath:  /shared/config
   rules:
-  - paths:
-    - /shared/config
+  - snapshots: ["latest"]
