Use `spec.invoker` instead of `spec.backupConfiguration` in BackupSession

--- a/docs/examples/crds/backupsession.yaml
+++ b/docs/examples/crds/backupsession.yaml
@@ -4,7 +4,9 @@ metadata:
   name: deployment-stash-demo-1564743309
   namespace: demo
 spec:
-  backupConfiguration:
+  invoker:
+    apiGroup: stash.appscode.com
+    kind: BackupConfiguration
     name: deployment-stash-demo
 status:
   totalHosts: 1
