--- a/docs/examples/guides/latest/advanced-use-case/instant-backup/backupsession.yaml
+++ b/docs/examples/guides/latest/advanced-use-case/instant-backup/backupsession.yaml
@@ -6,5 +6,7 @@ metadata:
   name: deployment-backupsession
   namespace: demo
 spec:
-  backupConfiguration:
+  invoker:
+    apiGroup: stash.appscode.com
+    kind: BackupConfiguration
     name: deployment-backup
