--- a/docs/examples/guides/latest/advanced-use-case/pause-backup/backupsession.yaml
+++ b/docs/examples/guides/latest/advanced-use-case/pause-backup/backupsession.yaml
@@ -6,6 +6,7 @@ metadata:
   name: instant-backupsession
   namespace: demo
 spec:
-  backupConfiguration:
+  invoker:
+    apiGroup: stash.appscode.com
+    kind: BackupConfiguration
     name: pause-backup
-
