--- a/docs/examples/crds/restoresession.yaml
+++ b/docs/examples/crds/restoresession.yaml
@@ -48,7 +48,7 @@ spec:
   tempDir:
     disableCache: false
     medium: Memory
-    size: 2Gi
+    sizeLimit: 2Gi
 status:
   totalHosts: 5
   phase: Succeeded
