--- a/docs/examples/design/sample-backup-session.yaml
+++ b/docs/examples/design/sample-backup-session.yaml
@@ -13,7 +13,7 @@ status:
   stats:
   - direcotry: /source/data
     snapshot: 40dc1520
-    size: 1.720 GiB
+    totalSize: 1.720 GiB
     uploaded: 1.200 GiB # upload size can be smaller than original file size if there are some duplicate files
     fileStats:
       new: 5307
