Update concept docs for hooks
Signed-off-by: hossainemruz <emruz@appscode.com>

--- a/docs/examples/crds/backupconfiguration.yaml
+++ b/docs/examples/crds/backupconfiguration.yaml
@@ -22,6 +22,21 @@ spec:
     volumeMounts:
     - name: source-data
       mountPath: /source/data
+  hooks:
+    preBackup:
+      exec:
+        command:
+          - /bin/sh
+          - -c
+          - echo "Sample PreBackup hook demo"
+      containerName: my-app-container
+    postBackup:
+      exec:
+        command:
+          - /bin/sh
+          - -c
+          - echo "Sample PostBackup hook demo"
+      containerName: my-app-container
   runtimeSettings:
     container:
       resources:
