--- a/docs/examples/guides/latest/hooks/pre_backup_hook_demo.yaml
+++ b/docs/examples/guides/latest/hooks/pre_backup_hook_demo.yaml
@@ -1,7 +1,7 @@
 apiVersion: stash.appscode.com/v1beta1
 kind: BackupConfiguration
 metadata:
-  name: pre-backup-hook-demo
+  name: backup-hook-demo
   namespace: demo
 spec:
   schedule: "*/5 * * * *"
