--- a/docs/examples/design/task/volume_recovery.yaml
+++ b/docs/examples/design/task/volume_recovery.yaml
@@ -1,4 +1,4 @@
-# volumeRecovery specifies required functions and their inputs to recover kuberenetes volume
+# volumeRecovery specifies required functions and their inputs to recover kubernetes volume
 apiVersion: stash.appscode.com/v1beta1
 kind: Task
 metadata:
