WIP: Update concept docs
Signed-off-by: hossainemruz <emruz@appscode.com>

--- a/docs/examples/crds/backupbatch.yaml
+++ b/docs/examples/crds/backupbatch.yaml
@@ -9,6 +9,7 @@ spec:
   schedule: "*/3 * * * *"
   members:
   - target:
+      alias: db
       ref:
         apiVersion: apps/v1
         kind: AppBinding
@@ -16,15 +17,20 @@ spec:
     task:
       name: mysql-backup-8.0.14
   - target:
+      alias: app
       ref:
         apiVersion: apps/v1
         kind: Deployment
         name: wordpress
       volumeMounts:
-        - name: wordpress-persistent-storage
-          mountPath: /var/www/html
+      - name: wordpress-persistent-storage
+        mountPath: /var/www/html
       paths:
-        - /var/www/html
+      - /var/www/html
+      exclude:
+      - /var/www/html/my-file.html
+      - /var/www/html/*.json
+  executionOrder: Parallel
   hooks:
     preBackup:
       exec:
